[project]
name = "ysnp-diversity"
version = "0.1.0"
description = "Faith's Phylogenetic Diversity on Y-SNP haplogroup trees (YFull) via scikit-bio"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    "lxml>=5.3",
    "numpy>=2.0",
    "resvg-py>=0.3.3",
    "rich>=13.7",
    "scikit-bio>=0.7",
]

[project.scripts]
ysnp-diversity = "main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "scraper", "parser", "newick", "groups", "significance", "pd_skbio"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: end-to-end performance benchmarks on large YFull trees (J1, J2, R1a); skipped by default — run with `-m slow`",
]
addopts = "-m 'not slow'"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
